[B] Fix header y-overflow during scroll

--- a/components/global/Header/_header.scss
+++ b/components/global/Header/_header.scss
@@ -32,7 +32,7 @@ $_breakpoint: functions.header(layout-breakpoint);
   @include base.respond($_breakpoint) {
     grid-template: "logo . search user-nav hamburger" auto / auto 1fr auto auto auto;
     gap: functions.header(gap);
-    overflow-x: hidden;
+    overflow: hidden;
   }
 
   @include base.respond(functions.header(breakpoint-for-search-bar)) {
